--- a/render.yaml
+++ b/render.yaml
@@ -12,7 +12,7 @@ projects:
             envVars:
               - key: DATABASE_URL
                 fromDatabase:
-                  name: pg-dev
+                  name: dev
                   property: connectionString
               - key: POOL_MODE
                 value: transaction
